# vennbase

./: .gitignore  .terraform.lock.hcl  Cargo.toml  README.md  main.tf
vennbase/: Cargo.toml
vennbase/src/: connection.rs  db.rs  main.rs  partition.rs  pool.rs  query.rs  utils.rs
vennbase/src/db/: mod.rs  partition.rs  types.rs  vennbase.rs
vennbase/src/features/: cache.rs  fast_querying.rs  mod.rs  resize.rs
vennbase/src/query/: mod.rs
vennbase/src/utils/: mod.rs  reading.rs
