[package]
name = "vennbase"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.4"
fast_image_resize = "2.7.3"
logic-parser = "1.3.0"
chrono = { version = "0.4.31", features = ["alloc", "std"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["jpeg", "jpeg_rayon", "png", "bmp", "webp-encoder"]
